<resources>

    //Placing strings into a separate file and then referencing them is better
    //because it makes localization easy. That's why we use strings. Ya noob.jk.

    <string name="app_name">GeograpyQuiz</string>

    <string name="question_text">Constantinople is the largest city in Turkey.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Prev</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="action_settings">Settings</string>
    <string name="question_oceans">The Pacific Ocean is larger than
                                    the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
                                    and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
                                     in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
                                 freshwater lake.</string>
    <string name="warning_text">Are you sure you want to do this? Think again!</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong, buddy.</string>
    <string name="title_activity_cheat">Cheat</string>

</resources>
