<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to the Geography Quiz!"
        android:layout_marginBottom="10dp"
        android:textSize="24dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lets test you Knowledge!"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:layout_gravity="center"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:text="@string/false_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="150dp">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/previous_button" />

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button"/>

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/next_button"/>

        <!--<Button-->
        <!--android:id="@+id/previous_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:drawableLeft="@drawable/arrow_left"-->
        <!--android:drawablePadding="4dp"-->
        <!--android:text="@string/previous_button" />-->

        <!--<Button-->
        <!--android:id="@+id/next_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:drawablePadding="4dp"-->
        <!--android:drawableRight="@drawable/arrow_right"-->
        <!--android:text="@string/next_button" />-->

    </LinearLayout>

</LinearLayout>